# obs-discord-voice-overlay

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  spec-desktop-tray-app.md  spec-discord-voice-overlay.md  spec-persistent-config.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: ARCHITECTURE.md
src/: autostart.rs  config.rs  events.rs  icons.rs  ipc.rs  main.rs  oauth.rs  state.rs  themes.rs  tray.rs  web.rs
web/themes/default/: app.js  overlay.html  style.css
web/themes/minimal/: app.js  overlay.html  style.css
web/themes/neon/: app.js  overlay.html  style.css
