[package]
name = "obs-discord-voice-overlay"
version = "0.1.0"
edition = "2021"
description = "Local Discord voice channel overlay for OBS via RPC IPC + HTTP/SSE"

[[bin]]
name = "obs-discord-voice-overlay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
thiserror = "1"
auto-launch = "0.5"
open = "5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
machine-uid = "0.5"
base64 = "0.22"

# Tray UI: needs GTK on Linux. The user's release target is Windows; on
# Linux we still compile but ship a no-op tray so cargo check / cargo test
# work without GTK system libraries on dev VMs.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.19"
tao = "0.30"

[workspace]
exclude = ["_probes/rpc-scope-probe"]
